# cross_platform_development_Qt

02/: CMakeLists.txt  main.cpp
03/: CMakeLists.txt  dialog.ui  form.cpp  form.h  form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
04/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
05/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
06/: CMakeLists.txt  mainwindow.cpp
07/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
